# qmunity

./: README.md  pyproject.toml  test_main.http
migrations/models/: 0_20221201214950_init.py  1_20221201223950_user_login_pwd.py  2_20221202220640_tag.py  3_20221210230703_update.py
qmunity/: config.py  main.py  routing.py
qmunity/controllers/: auth.py  common_objects.py  cv.py  obj.py  user.py
qmunity/controllers/cv/: __init__.py  controller.py  objects.py
qmunity/depends/: __init__.py  auth.py  mongodb_connection.py
qmunity/endpoints/: auth.py  cv.py  responses.py  user.py
qmunity/models/: __init__.py  auth.py  cv.py  mongo_model.py  user.py
qmunity/repository/: auth.py  cv.py  exceptions.py  user.py
